<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/main_scroll_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailMovieActivity"
    tools:ignore="ScrollViewCount"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ScrollViewSize">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:paddingBottom="10dp">

            <ImageView
                android:id="@+id/img_cover_detail"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription"
                tools:src="@drawable/tv_poster_arrow"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:alpha="0.5"
                android:background="#000000"
                app:layout_constraintEnd_toEndOf="@id/img_cover_detail"
                app:layout_constraintStart_toStartOf="@id/img_cover_detail"
                app:layout_constraintTop_toTopOf="@id/img_cover_detail"
                app:layout_constraintBottom_toBottomOf="@id/img_cover_detail"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/img_photo_detail"
                android:layout_width="180dp"
                android:layout_height="250dp"
                android:layout_marginTop="180dp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.129"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:src="@drawable/tv_poster_arrow"
                tools:ignore="ContentDescription"/>

            <TextView
                android:id="@+id/detail_title_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="Aquaman"
                android:textSize="25dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/img_photo_detail"
                app:layout_constraintTop_toBottomOf="@id/img_photo_detail"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/rating_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating_detail"
                android:textSize="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/detail_title_text_view"
                app:layout_constraintTop_toBottomOf="@id/detail_title_text_view"
                tools:ignore="SpUsage" />

            <RatingBar
                android:id="@+id/rating_bar"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:theme="@style/Theme.Rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/rating_text_view"
                app:layout_constraintBottom_toBottomOf="@id/rating_text_view" />

            <TableLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/rating_text_view"
                app:layout_constraintTop_toBottomOf="@id/rating_text_view"
                android:layout_marginRight="10dp">
                <TableRow tools:ignore="UselessParent">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/genre_label"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/genres_detail_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        tools:text="Action"
                        android:layout_weight="3"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/year_label"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/year_detail_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        tools:text="2019"
                        android:layout_weight="3"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/language_label"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/language_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        tools:text="EN"
                        android:textAllCaps="false"
                        android:layout_weight="3"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:id="@+id/duration_label_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/duration_label"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/duration_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        tools:text="128 minutes"
                        android:layout_weight="3"/>
                </TableRow>
                <TableRow android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description_label"
                        android:layout_span="4"
                        android:layout_weight="1"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/detail_description_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Oliver Queen, playboy miliuner yang pascaterdampar lima tahun di pulau terpencil, kembali pulang bersenjatakan busur &amp; panah untuk menumpas kejahatan di Kota Star sebagai vigilante rahasia bernama Green Arrow."
                        android:layout_weight="1"
                        android:layout_span="4"/>
                </TableRow>
            </TableLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <include
            android:id="@+id/view_error"
            layout="@layout/view_error"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_centerInParent="true" />
        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:innerRadiusRatio="3"
            android:thicknessRatio="20"
            android:background="@drawable/progress_bar_background"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

</ScrollView>