<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/favorite_item"
        android:title="@string/favorite_list"
        android:orderInCategory="1"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_collections_bookmark_24"/>
    <item
        android:id="@+id/sort_item"
        android:title="@string/order_by_rating"/>
</menu>